this is naveeen code

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a561cf">  <td>22/04/07 13:29:58</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.test.LoginPageTest@5c30a9b0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1836463382</td>   <td></td> </tr>
-<tr bgcolor="938063">  <td>22/04/07 13:29:58</td>   <td>-51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.ATC_005_registerLink()[pri:0, instance:com.qa.opencart.test.LoginPageTest@5c30a9b0]">ATC_005_registerLink</td> 
-  <td>main@1836463382</td>   <td></td> </tr>
-<tr bgcolor="a561cf">  <td>22/04/07 13:29:55</td>   <td>-3288</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.test.LoginPageTest@5c30a9b0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1836463382</td>   <td></td> </tr>
+<tr bgcolor="c9af8a">  <td>22/04/14 17:35:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:36</td>   <td>8113</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.accountsPageSetup()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">&gt;&gt;accountsPageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:37</td>   <td>9332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_201_getTitle()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_201_getTitle</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:38</td>   <td>9500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_202_headerExit()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_202_headerExit</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:38</td>   <td>9551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_203_searchExit()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_203_searchExit</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:38</td>   <td>9589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_204_accountSection()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_204_accountSection</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:38</td>   <td>9671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_205_searchHeaderTest()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_205_searchHeaderTest</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:39</td>   <td>10385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_206_searchProductTest()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_206_searchProductTest</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="a76687">  <td>22/04/14 17:35:39</td>   <td>11036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.TC_207_searchProductListTest()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">TC_207_searchProductListTest</td> 
+  <td>main@92575452</td>   <td></td> </tr>
+<tr bgcolor="c9af8a">  <td>22/04/14 17:35:40</td>   <td>11686</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.test.AccountsPageTest@12958360]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@92575452</td>   <td></td> </tr>
 </table>
